--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
-inventory = /home/student/hosts
-host_key_checking = False
-record_host_keys = /dev/null
+#inventory = /home/student/hosts
+#host_key_checking = False
+#record_host_keys = /dev/null
 
+host_key_checking = False
+inventory = /home/student/mycode2/mycode/inv/dev/nethosts
+retry_files_enabled = False
