--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,21 @@
 [defaults]
+
+#lab 28
 #inventory = /home/student/hosts
 #host_key_checking = False
 #record_host_keys = /dev/null
 
+##lab 29
+#host_key_checking = False
+#inventory = /home/student/mycode2/mycode/inv/dev/nethosts
+#retry_files_enabled = False
+#roles_path= /home/student/mycode2/mycode/roles/
+
+
+##Lab 30
+#host_key_checking = False
+#inventory = /home/student/mycode2/mycode/inv/dev/nethostsecured
+#roles_path = /home/student/mycode/roles/
+
 host_key_checking = False
-inventory = /home/student/mycode2/mycode/inv/dev/nethosts
-retry_files_enabled = False
+inventory = /home/student/mycode2/mycode/agnosticnet/hosts
